--- a/RandomTvShow/Properties/Settings.settings
+++ b/RandomTvShow/Properties/Settings.settings
@@ -26,5 +26,11 @@
     <Setting Name="ThemeIndex" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="AppColourHover" Type="System.Drawing.Color" Scope="User">
+      <Value Profile="(Default)">116, 116, 116</Value>
+    </Setting>
+    <Setting Name="AppColourMenuHover" Type="System.Drawing.Color" Scope="User">
+      <Value Profile="(Default)">116, 116, 116</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
