--- a/RandomTvShow/packages.config
+++ b/RandomTvShow/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="AngleSharp" version="0.9.10" targetFramework="net461" />
   <package id="HtmlAgilityPack" version="1.8.7" targetFramework="net461" />
+  <package id="NLog" version="4.5.11" targetFramework="net461" />
 </packages>
