Add ability to save a device to cast to; Add buttons to cast a file - in progress.

--- a/RandomTvShow/App.config
+++ b/RandomTvShow/App.config
@@ -48,6 +48,12 @@
       <setting name="AppColourMenuHover" serializeAs="String">
         <value>116, 116, 116</value>
       </setting>
+      <setting name="ChromecastURI" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ChromecastName" serializeAs="String">
+        <value />
+      </setting>
     </RandomTvShow.Properties.Settings>
   </userSettings>
 </configuration>
