--- a/RandomTvShow/packages.config
+++ b/RandomTvShow/packages.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AngleSharp" version="0.9.10" targetFramework="net461" />
+  <package id="Google.Protobuf" version="3.3.0" targetFramework="net461" />
   <package id="HtmlAgilityPack" version="1.8.7" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="NLog" version="4.5.11" targetFramework="net461" />
+  <package id="Rssdp" version="3.5.4" targetFramework="net461" />
+  <package id="SharpCaster" version="0.4.0" targetFramework="net461" />
+  <package id="Sharpcaster.SocketsForPCL" version="2.0.4" targetFramework="net461" />
 </packages>
